Source/WebCore/rendering/style/GridPosition.h
@@ -45,12 +45,33 @@ enum GridPositionType {
     NamedGridAreaPosition // <ident>
 };
 
+enum GridPositionSide {
+    ColumnStartSide,
+    ColumnEndSide,
+    RowStartSide,
+    RowEndSide
+};
+
 class GridPosition {
 public:
     GridPosition()
         : m_type(AutoPosition)
         , m_integerPosition(0)
     {
+    }
+
+    static inline size_t adjustGridPositionForRowEndColumnEndSide(size_t resolvedPosition)
+    {
+        return resolvedPosition ? resolvedPosition - 1 : 0;
+    }
+
+    static size_t adjustGridPositionForSide(size_t resolvedPosition, GridPositionSide side)
+    {
+        // An item finishing on the N-th line belongs to the N-1-th cell.
+        if (side == ColumnEndSide || side == RowEndSide)
+            return adjustGridPositionForRowEndColumnEndSide(resolvedPosition);
+
+        return resolvedPosition;
     }
 
     bool isPositive() const { return integerPosition() > 0; }
@@ -103,7 +124,7 @@ public:
 
     bool operator==(const GridPosition& other) const
     {
-        return m_type == other.m_type && m_integerPosition == other.m_integerPosition;
+        return m_type == other.m_type && m_integerPosition == other.m_integerPosition && m_namedGridLine == other.m_namedGridLine;
     }
 
     bool shouldBeResolvedAgainstOppositePosition() const
